# example_ci_pytest_jenkins

./: .gitignore  Jenkinsfile  dockerfile  pyproject.toml  readme.md
src/example/: server.py
test/: conftest.py
test/utils/: mock_server.py
